[BE] Account delegate APIs (#103)
Email when someone is invited is still pending.
